--- a/src/app/components/categorias/excluir-categoria/excluir-categoria.component.html
+++ b/src/app/components/categorias/excluir-categoria/excluir-categoria.component.html
@@ -18,7 +18,7 @@
 
             <div class="d-flex gap-2 my-2 justify-content-end">
                 <button type="submit" class="btn btn-danger px-5">CONFIRMAR</button>
-                <button routerLink="/notas/listar" class="btn btn-outline-primary px-4">CANCELAR</button>
+                <button routerLink="/categorias/listar" class="btn btn-outline-danger px-4">CANCELAR</button>
             </div>
         </form>
     </div>
