--- a/src/app/components/notas/card-nota/card-nota.component.html
+++ b/src/app/components/notas/card-nota/card-nota.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="card h-100 bg-{{nota.tema}}">
+<div class="card h-100 border-{{nota.tema}}">
     <div class="card-body">
         <div class="d-flex align-items-center">
             <h5 class="card-title">{{nota.titulo}}</h5>
@@ -8,8 +8,7 @@
     </div>
     <div class="d-flex gap-1 justify-content-end card-footer bg-transparent">
 
-        <span *ngIf="categoria"
-            class="badge rounded-pill text-bg-light d-flex justify-content-center align-items-center">{{nota.categoria?.titulo}}</span>
+        <span *ngIf="categoria" class="badge rounded-pill text-bg-light d-flex justify-content-center align-items-center">{{nota.categoria?.titulo}}</span>
 
         <button routerLink="/notas/editar/{{nota.id}}" class="btn btn-outline-dark" aria-label="Editar"
             ngbTooltip="Editar" placement="bottom">
@@ -20,8 +19,8 @@
             <i class="bi bi-trash"></i>
         </button>
     </div>
-</div> -->
-
+</div> 
+<!-- 
 <div class="card h-100 border-{{ nota.tema }}">
     <div class="card-body">
       <div class="d-flex align-items-center">
@@ -52,4 +51,4 @@
       </button>
     </div>
   </div>
-  
+   -->
