--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid px-lg-4">  
-      <a class="navbar-brand text-primary fw-bold">NoteKeeper</a>
+      <a class="navbar-brand text-primary fw-bold">NK</a>
       <div class="d-flex">
         <a routerLink="notas/listar" class="nav-link ml-auto mx-2">Início</a>
         <a routerLink="categorias/listar" class="nav-link ml-auto mx-2">Categorias</a>
