--- a/src/app/components/notas/listar-notas/listar-notas.component.html
+++ b/src/app/components/notas/listar-notas/listar-notas.component.html
@@ -1,4 +1,4 @@
-<section class="row gap-3">
+<section class="row gap-4 mx-5">
     <h1>Minhas Notas</h1>
 
     <div class="row g-2">
@@ -7,11 +7,9 @@
                 <i class="bi bi-plus-circle"></i>
                 Criar Nota
             </button>
-        </div>
 
-        <div class="row g-2">
             <div ngbDropdown class="col-6 d-flex justify-content-start align-items-center">
-                <button type="button" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Filtrar por Categoria</button>
+                <button type="button" class="btn btn-lg btn-outline-primary rounded-4 mx-2" id="dropdownBasic1" ngbDropdownToggle>Filtrar notas por Categoria</button>
 
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
                     <button *ngFor="let categoria of categorias" routerLink="/notas/filtrar/{{categoria.id}}" ngbDropdownItem>{{categoria.titulo}}</button>
@@ -20,7 +18,7 @@
         </div>
     </div>
 
-    <div class="row g-1">
+    <div class="row g-1 mx-2">
         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-1 d-flex align-items-center justify-content-center">
             <button routerLink="/notas/listar/" class="btn btn-sm btn-primary rounded-4 w-100">Todos</button>
         </div>
@@ -30,7 +28,7 @@
         </div>
     </div>
 
-    <div class="row g-3">
+    <div class="row g-1 mx-2">
         <div *ngFor="let nota of notas" class="col-sm col-md-6 col-lg-3">
             <app-nota [nota]="nota"></app-nota>
         </div>
